# split

./: .gitignore  Cargo.toml  LICENSE  README.md  hello.txt
src/: main.rs  tests.rs
src/file_utils/: mod.rs  splitter.rs
src/models/: args.rs
src/splitter/: generic_splitter.rs  mod.rs
src/tests/: test_generic_splitter.rs
src/tests/resources/: test.txt  test_empty_lines.txt
src/utils/: file_utils.rs  mod.rs  splitter.rs
