[package]
name = "split"
authors = ["Luftig"]
version = "0.1.0"
edition = "2021"
description = "A simple and very fast implementation of Unix Split tool using Rust"
repository = "https://github.com/shaharluftig/split"
license = "MIT"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
